# shipyard

./: .env.example  .gitignore  CLAUDE.md  CODEAGENT.md  Dockerfile  Dockerfile.rebuild  README.md  coding-standards.md  demo.txt  docker-compose.rebuild.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
_bmad-output/: project-context.md
docs/: ai-development-log.md  cost-analysis.md  trace-links.md
gauntlet_docs/: FINAL-requirements-map.md  MVP-requirements-map.md  PRESEARCH.html  PRESEARCH.md  ai-development-log.md  bmad-skill-setup-guide.md  cost-analysis.md  customized_skills.md  early-submit-requirements-map.md  epic-review-redesign.md  epics-hello-world.md  git-remote-setup-guide.md  html-to-pdf.mjs  instruct-summary.md  intake-summary.md  langgraph-diagrams.md  mvp-demo-script.md  orchestrator-redesign-graph.md  orchestrator-redesign-rationale.md  post-rebuild-summary.md  process_failure_analysis.md  system-flow.mmd  users-guide.md
looper/: build-loop.sh  ci.sh  code-review-analysis-fix.sh  code-review-loop-bmad-orig.sh  code-review-loop-bmad.sh  code-review-loop-claude.sh  epic1-analysis-fix-state.json  epic1-architect-review-needed.md  epic1-ci-issues-attempt-1.txt  epic1-code-review-analysis.md  epic1-code-review-fix-plan-done.md  epic1-code-review-fix-plan.md  epic2-analysis-fix-state.json  epic2-architect-review-needed.md  epic2-ci-issues-attempt-1.txt  epic2-code-review-analysis.md  epic2-code-review-fix-plan-done.md  epic2-code-review-fix-plan.md  epic3-analysis-fix-state.json  epic3-architect-review-needed.md  (+17 more)
(+94 files in other folders)
